@@ -9,6 +9,7 @@
 - added: NOSQL/TABLE supports `!field` as a boolean toggle in modify/update method
 - added: `RUN()` for executing multiple Total.js operations
 - added: a new global alias `CONF` (it's a reference to config) for `F.config`
+- added: `DatabaseBuilder.arg(key, value)` for adding an dynamic argument
 
 - updated: `debug` mode creates a `start_name_script.pid` instead of `debug.pid`
 - updated: `NEWOPERATION()` supports `repeat` and `stop` argument
